# PanelSFA

./: .readthedocs.yaml  LICENSE  README.md  analysis.py  dairy_with_TE.csv  howto.md  pyproject.toml  requirements.txt  test.ipynb  test_four_component.py  test_models.py  test_true_effects.py
docs/source/: api.md  conf.py  index.rst  installation.md  models.md  quickstart.md  theory.md
panelsfa/: README.md  __init__.py  base.py  cross_sectional.py  effects_panel.py  four_component.py  setup.py  time_decay.py  true_effects.py
panelsfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
